# bioindex

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: benchmark_and_queries.py  benchmark_full.py  benchmark_search.py
cgamma_src/: gamma.c  gamma_c.py  setup.py
data/indexes/: metadata.json
db/: models.py  session.py
docs/: benchmark1.md  benchmark2.md  benchmark3.md  comparison_cgamma.md  comparison_compressed.md
parsers/: rules_parser.py
scripts/: build_cgamma_index.py  build_compressed_index_acmg.py  build_inverted_index_acmg.py  check_index_files.py  load_elasticsearch.py
tests/: base_index_check.py  test_build_cgamma_index.py  test_build_compressed_index_acmg.py  test_build_inverted_index_acmg.py  test_check_index_files.py  test_load_elasticsearch.py  test_rules_parser.py
