[project]
name = "bioindex"
version = "0.0.1"
description = "ACMG inverted index"
requires-python = ">=3.14"

dependencies = [
    "sqlalchemy>=2.0",
    "elasticsearch>=9.0",
    "setuptools>=80.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db", "data", "parsers", "scripts", "tests", "benchmarks", "cgamma_src"]
exclude = ["venv*"]

[tool.coverage.run]
omit = [
    "benchmarks/*",
    "tests/*",
    "*/__main__.py"
]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover"
]

[tool.pytest.ini_options]
addopts = "--cov=scripts --cov=parsers --cov-report=term-missing"